--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Jekyll Themes
-url: http://matt.harzewski.com
-description: Insert tagline here
+name: lokiii
+url: http://loki-pup.github.io
+description: A DOG LOVER'S BLOG
 
 permalink: /themes/:title/
 
